fixed loop and booster stations